@@ -35,7 +35,6 @@ if (!$no_db)
     }
 }
 
-global $BenchmarkTimer;
 if (is_object ($BenchmarkTimer) )
 {
     $stoptime = $BenchmarkTimer->stop();
