@@ -15,7 +15,7 @@
 //  You should have received a copy of the GNU Affero General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 //
-// File: classes/bnt/timer.php
+// File: vendor/bnt/timer.php
 namespace bnt;
 
 if (strpos ($_SERVER['PHP_SELF'], 'timer.php')) // Prevent direct access to this file
